--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-INSTALL_VERSION=20251018
-MENU_VERSION=20251018
+INSTALL_VERSION=20251102
+MENU_VERSION=20251102
+START_MODE=1
 DISCORD_DOWNLOAD=https://github.com/print-yuhuan/SillyTavern-Termux/releases/download/v288.15-Stable/Discord_288.15-Stable.apk
 JIUGUAN_LINK=https://discord.gg/sillytavern
 LEINAO_LINK=https://discord.gg/odysseia
